--- a/Quiz.Application/_Imports.razor
+++ b/Quiz.Application/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using Quiz.Application
 @using Quiz.Application.Layout
+@using Quiz.Application.Services
+@using Quiz.Data
