--- a/Quiz.Application/Pages/Index.razor
+++ b/Quiz.Application/Pages/Index.razor
@@ -1,19 +1,18 @@
 ﻿@page "/"
 @inject NavigationManager NavigationManager
+@inject IJSRuntime Js
 
-<h4>Witamy w Quizie</h4>
+<h1>Witamy w Quizie</h1>
+<p>Spróbuj odpowiedzieć na 7 pytań</p>
+<p>Powodzenia !!!</p>
 <br/>
-<h3>Spróbuj odpowiedzieć na 7 pytań</h3>
-<h3>Powodzenia !!!</h3>
-<br/>
-<br/>
-<button class="btn btn-primary sanbutton" @onclick="StartQuiz">Rozpocznij Quiz</button>
-
+<button class="btn btn-primary" @onclick="StartQuiz">Rozpocznij quiz</button>
 
 @code {
-    private void StartQuiz()
-    {
-        NavigationManager.NavigateTo("/question/100");
-    }   
 
+    private async Task StartQuiz()
+    {
+        await Js.InvokeVoidAsync("localStorage.setItem", CookieName.CATEGORY, "100");
+        NavigationManager.NavigateTo("/question");  
+    }
 }
