--- a/Quiz.Application/Pages/Question.razor
+++ b/Quiz.Application/Pages/Question.razor
@@ -1,26 +1,98 @@
-﻿@page "/question/{Category}"
-@using Quiz.Data
+﻿@page "/question"
 @inject NavigationManager NavigationManager
+@inject IJSRuntime Js
+@inject IGameService GameService
 
-<h3>Jak miał na imię Einstein</h3>
-<div class="question">
-    <div class="answer">Albert</div>
-    <div class="answer">Leszek</div>
-    <div class="answer">Damian</div>
-    <div class="answer">Andrzej</div>
-</div>
+<style>
+    .answer {
+    min-width: 300px;
+    margin: 25px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: lightblue;
+    color: #000000;
+    cursor: pointer;    
+    }
+
+    .answer:hover {
+    background-color: blue;
+    color: #ffffff;
+    }   
+</style>
+
+@if (isLoading)
+{
+    <h5>@loaderText</h5>
+}
+
+@if (question != null && !isLoading)
+{
+    <h5>Pytanie za @question.Category pkt.</h5>
+    <h4>@question.Content</h4>
+    <br />
+    <div style="max-width: 700px; display: flex; align-items: center; justify-content:space-between; flex-wrap:wrap;">
+        @foreach (var answer in question.Answers!)
+        {
+            <div class="answer" @onclick="() => SetAnswer(answer.Id)">@answer.Content</div>
+        }
+    </div>
+}
+
+
 
 @code {
 
-    [SupplyParameterFromQuery]
-    [Parameter]
-    public string? Category { get; set; }
 
-    //private QuestionDto? selectedQuestion;
+    private int currentCategory;
+    private string? loaderText;
+    private bool isLoading;
+    private QuestionDto? question;
 
-    // protected override void OnInitialized()
-    // {
-    //     question = new QuestionDto {  }
-    // }
+    override protected async Task OnInitializedAsync()
+    {
+        loaderText = "Trwa ładowanie pytania ...";
+        isLoading = true;
+        await GetQuestion();
+    }
+
+    private async Task GetQuestion()
+    {
+        var cat = await Js.InvokeAsync<string>("localStorage.getItem", CookieName.CATEGORY);
+        currentCategory = int.Parse(cat!);
+        loaderText = "Trwa ładowanie pytania ...";
+        isLoading = true;
+        question = await GameService.GetQuestion(currentCategory);
+        isLoading = false;
+        StateHasChanged();
+    }
+
+
+    private async Task SetAnswer(string answerId)
+    {
+        question = null;
+        loaderText = "Sprawdzanie odpowiedzi ...";
+        isLoading = true;
+        var check = await GameService.CheckAnswer(answerId, currentCategory);
+        if (check!.IsCorrectAnswer)
+        {
+            if (check!.NextCategory == 0)
+            {
+                NavigationManager.NavigateTo("/success");
+            }
+            else
+            {
+                await Js.InvokeVoidAsync("localStorage.setItem", CookieName.CATEGORY, check.NextCategory.ToString());
+                NavigationManager.NavigateTo($"/goodanswer");
+            }
+        }
+        else
+        {
+            NavigationManager.NavigateTo("/gameover");
+        }
+        isLoading = false;
+        StateHasChanged();
+    }
 
 }
